New update with layered structure

--- a/SuperMarketAPI/appsettings.json
+++ b/SuperMarketAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=SuperMarketDb;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=.;Database=SuperMarketDb;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
@@ -9,10 +9,11 @@
     }
   },
   "AllowedHosts": "*",
-  "Jwt": {
-    "Issuer": "YourIssuer",
-    "Audience": "YourAudience",
-    "Key": "YourSecretKey"
+  "JwtSettings": {
+    "SecretKey": "this is a very strong key",
+    "Issuer": "MyApi",
+    "Audience": "MyApiUsers",
+    "ExpiryMinutes": 60
   }
 }
 
